...
                  TextPosition(offset: prediction.description?.length ?? 0),
                );
                Navigator.pop(context);
              },
              onChanged: _filterSuggestions,
              decoration: InputDecoration(
                hintText: "Type address...",
                border: OutlineInputBorder(
                  borderRadius: BorderRadius.circular(8),
                ),
                contentPadding: const EdgeInsets.all(10),
              ),
            ),
...
              onPressed: () {
                if (_searchController.text.isNotEmpty) {
                  widget.onSelect(_searchController.text);
                  Navigator.pop(context);
                }
              },
              child: const Text("Use this Address"),
            ),
          ],
        ),
      ),
    );
  }
...
